# HttpArena

./: .gitignore  README.md
.github/workflows/: benchmark-pr.yml  benchmark.yml  deploy.yml  pr-commands.yml  validate.yml
data/: jwt-token.txt  redis-entrypoint.sh
docker/: gcannon.Dockerfile  h2load-h3.Dockerfile
frameworks/_shared/authsvc/: Cargo.toml  Dockerfile
frameworks/_shared/authsvc/src/: main.rs
frameworks/actix/: meta.json
frameworks/aleph/: Dockerfile  meta.json  project.clj
frameworks/apache/: Dockerfile  README.md  baseline11.lua  httpd.conf  meta.json  pipeline.lua
frameworks/aspnet-grpc/: Dockerfile
frameworks/aspnet-minimal/: Dockerfile  Program.cs  aspnet-minimal.csproj  meta.json
frameworks/aspnet-minimal-aot/: Dockerfile  meta.json
frameworks/aspnet-minimal-iouring/: AppData.cs  Dockerfile  Models.cs  Program.cs  aspnet-minimal-iouring.csproj  build.sh  meta.json  patch-iouring.py
frameworks/aspnet-minimal_caddy/: Dockerfile  Program.cs  compose.gateway-h3.yml  meta.json
frameworks/aspnet-minimal_nginx/: Dockerfile  Program.cs  README.md  aspnet-minimal_nginx.csproj  compose.gateway.yml  compose.production-stack.yml  meta.json
frameworks/aspnet-mvc/: Dockerfile  meta.json
frameworks/aspnet-websocket/: Dockerfile
frameworks/blitz/: README.md  build.zig  meta.json
frameworks/bun/: meta.json  package.json  server.ts
frameworks/caddy/: Caddyfile  Dockerfile  README.md  handler.go  meta.json
frameworks/carno/: meta.json
frameworks/chi/: go.mod  go.sum  main.go  meta.json
frameworks/deno/: main.ts  meta.json
frameworks/django/: Dockerfile  gunicorn_conf.py  meta.json  requirements.txt  settings.py  urls.py  views.py
frameworks/drogon/: Dockerfile  main.cc  meta.json
frameworks/echo/: go.mod  go.sum  main.go  meta.json
frameworks/elysia/: meta.json  package.json  server.ts
frameworks/envoy/: Dockerfile  README.md  envoy.yaml  meta.json
frameworks/fastapi/: Dockerfile  app.py  launcher.py  meta.json  requirements.txt
frameworks/fastify/: meta.json  package.json  server.js
frameworks/fastpysgi-asgi/: Dockerfile  app.py  meta.json  requirements.txt
frameworks/fastpysgi-wsgi/: Dockerfile  requirements.txt
frameworks/fiber/: Dockerfile  go.mod  go.sum  main.go  meta.json
frameworks/flask/: app.py  gunicorn_conf.py  gunicorn_conf_ssl.py  meta.json  requirements.txt
frameworks/fletch/: meta.json  pubspec.yaml
frameworks/frankenphp-trueasync/: meta.json  worker.php
frameworks/genhttp/: Dockerfile  Model.cs  Program.cs  Project.cs  README.md  genhttp.csproj  meta.json
frameworks/genhttp-websocket/: Dockerfile
frameworks/gin/: go.mod  go.sum  main.go  meta.json
frameworks/gleam-mist/: Dockerfile  gleam.toml  meta.json
frameworks/go-fasthttp/: Dockerfile  go.mod  go.sum  main.go  meta.json
frameworks/h2o/: CMakeLists.txt  Dockerfile  meta.json
frameworks/h2o-mruby/: entrypoint.sh  meta.json
frameworks/helidon/: meta.json
frameworks/hono/: meta.json  package.json  server.js
frameworks/hono-bun/: meta.json  package.json  server.ts
frameworks/humming-bird/: Dockerfile  Package.swift  meta.json
frameworks/hyper/: Cargo.toml
frameworks/hyper/src/: main.rs
frameworks/hyperf/: 50_overrides.ini  README.md
frameworks/kemal/: Dockerfile  meta.json  shard.yml
frameworks/ntex-iouring/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/pingora/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/pingora/src/: main.rs
frameworks/rocket/: Cargo.toml  meta.json
frameworks/rocket/src/: main.rs
frameworks/salvo/: Cargo.toml  meta.json
frameworks/salvo/src/: main.rs
requests/: crud-list-rand-1.raw  gateway-64-uris.txt  production-stack-reads.txt  production-stack-write-body.json  production-stack-writes.txt
scripts/: benchmark-lite.sh  benchmark.sh  run.sh  validate.sh
(+361 files in other folders)
