[package]
name = "httparena-ntex"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
ntex = { version = "3", features = ["neon-uring", "compress"] }
# Pin ntex-error to <1.6.2 — upstream 1.6.2 removed ErrorType used by ntex 3.6.2
ntex-error = ">=1.4, <1.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
