[package]
name = "httparena-pingora"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.8", features = ["openssl"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
bytes = "1"
async-trait = "0.1"
http = "1"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
